@@ -1,24 +1,18 @@
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-DIST kernel-eeepc-2.6.30.3.x86.tbz2 5214485 RMD160 2d3dfee5940e2b2493c26f808597604e033e1099 SHA1 d74c86b0a5104f5e272b4ec807d38238f9a01d1e SHA256 8df144a888193701b0e5c8672569de428fe33c2d69a679ecf371355c07455ea9
-DIST kernel-eeepc-2.6.30.5.x86.tbz2 5131497 RMD160 a6c1acaed9745c924bbadcd19df3e28e27915fe2 SHA1 113ae9a13d473a791125e38d3f8a8cf68cff3081 SHA256 1ca81d81a303ddffcdbf394a5c847ec01270a9427e86e9f7737901f1e39e4818
-DIST kernel-eeepc-2.6.30.x86.tbz2 5031254 RMD160 154ae49f8c4bb3f628a4c9949484a3b1c8672b4c SHA1 6e116bc7bd2227f71735ebb2b097d9de96679dad SHA256 009e90c918c25320e3714f760e2a08383b5cd1d1961a627e1485bf9a91bfa55c
+DIST kernel-eeepc-2.6.31.1.x86.tbz2 5240071 RMD160 f112226026a33a281649cebb9c1c6470e5de52b0 SHA1 5bb9f4cb2f9c132b7472c7fc67d8bcdb0784b44f SHA256 67ff94f9c22964943ac5af4e40c04e592286dda52337ca1dae35ef432e799a63
 DIST kernel-eeepc-2.6.31.x86.tbz2 5239727 RMD160 7c13544216e04f1065046c00c7adfc8cd0ae8b3c SHA1 c87cad0d2952d94b7d27350bc365d848305a1227 SHA256 a5398cfcba46669c9fd15e12b0ba27097a106d90dcfc3ba14ef1819fe74948f5
-DIST modules-eeepc-2.6.30.3.x86.tbz2 1467353 RMD160 daef64ff5fabc459f7f4f1167e4ca44105dc3e10 SHA1 0d5bdc2790e5ca61f274fc8c4df17c34aa9b3206 SHA256 754d172ffbff6d57965b162e592685a33171a9ecded69cfedaefbd4c9ba2a21e
-DIST modules-eeepc-2.6.30.5.x86.tbz2 1632724 RMD160 e1026474cbfa5eb61d6b12d6108c86efcbad5d7a SHA1 48470e966b1dd414bf957fb4884c9af46c551d79 SHA256 f3b198ed84c2370798d39576be56ef594666d8ec47ffe36b4ac358e280ffdc01
-DIST modules-eeepc-2.6.30.x86.tbz2 1287417 RMD160 0cf89c80c240f82ebbff126a4901188edf72a2cc SHA1 e18160a8cb7821b80d38a0681728bcee420b9c1f SHA256 38be044089083e389b39e0ebb5c1ab0b55e3e0cae45668d240d2d38890d49095
+DIST modules-eeepc-2.6.31.1.x86.tbz2 1667897 RMD160 341ed36f4f4d7557630bd7a7a917d8f587123506 SHA1 1619808e49fc756f2ed816a6cef70058784f3bbd SHA256 4c4f8635425e020e4bda99ce131a4c30f4ce0b4c1efd296e090a72a830746f1f
 DIST modules-eeepc-2.6.31.x86.tbz2 1679812 RMD160 18a652007ef2317b02f2e8f47cc1ab911e23fbb4 SHA1 f762816e3f81b218a777ce42dc2e815a7919f244 SHA256 0edb02e4eb70eb2bdc5144142ca26733fce9fcc571245ad9fad83ebb0e0ea6dc
-EBUILD kernel-eeepc-2.6.30.3.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-EBUILD kernel-eeepc-2.6.30.5.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-EBUILD kernel-eeepc-2.6.30.ebuild 1236 RMD160 e01902045f8b773a9b960d45725d1c804616673b SHA1 88bfc22e3c0cf909841df9862e4d0019957c5653 SHA256 3c6e619023915202141f3b9f03b07123bbe39b390e664d0a2b482e5e2ad9e797
+EBUILD kernel-eeepc-2.6.31.1.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
 EBUILD kernel-eeepc-2.6.31.ebuild 1220 RMD160 fb13671274964311f98b038d62bcab918b82d38d SHA1 e0cc49ce44bb744109cc4a7514593b34f9e9e546 SHA256 6c0e4043a37340634f551064d8c8f1ee4a36cdcdea983ba29a492c79d7dd6109
-MISC ChangeLog 420 RMD160 241ea1e361e671ac88c5852c78d153a9b002a835 SHA1 00fd3be9d64d1e160d3b0b2221343596ba1a544d SHA256 cb2a5ca6a1050beac5e0d8a2ae6fccc7ee23783cf73f332852c268db337083dd
+MISC ChangeLog 653 RMD160 565fa5f6fddbf493c2cf97c6b122adcff848db68 SHA1 746994a7311feb1e847542988c20dbba52ff7a8d SHA256 5f981592564909820fc5fbba3bc48c8b5bc1312a4a60ec6dbce921815920be4e
 MISC metadata.xml 301 RMD160 759f51dcb64d85eee294cf160d7eedff66f3c6f6 SHA1 36446536d5452b1771f375c9d6fbf867bb705587 SHA256 a1d5a7bd389d314377303e077893dcae8ed0c8bd5bf4389c384d751704c27b2d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.11 (GNU/Linux)
 
-iD8DBQFKqoIdQW+hXSf0t0IRAhyIAJ4kOyN8ifiMlVoLLjmSSgktFBvLLACgjr5R
-H4Lo2jxcFrmaa8C09ouiOzw=
-=BGnt
+iD8DBQFKxmnIQW+hXSf0t0IRAkh/AKC8FBBUU1Xm+QiK9irAcYG6JkPUagCeJWaH
+mtywUsjtsqukglv0dB83y68=
+=7a5L
 -----END PGP SIGNATURE-----
