@@ -2,6 +2,13 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*kernel-eeepc-2.6.31.1 (02 Oct 2009)
+
+  02 Oct 2009; Lance Albertson <ramereth@gentoo.org>
+  -kernel-eeepc-2.6.30.ebuild, -kernel-eeepc-2.6.30.3.ebuild,
+  -kernel-eeepc-2.6.30.5.ebuild, +kernel-eeepc-2.6.31.1.ebuild:
+  Version bump
+
 *kernel-eeepc-2.6.31 (11 Sep 2009)
 
   11 Sep 2009; Lance Albertson <ramereth@gentoo.org>
